Fix single-stream image size on mobile

--- a/app/yoshinom/styles.less
+++ b/app/yoshinom/styles.less
@@ -160,14 +160,14 @@ header {
 .venue {
   position: relative;
   width: @venue_width;
-  height: @venue_width;
-  margin: 2em;
+  max-width: 100%;
+  margin: 1.5em 0;
 
   .card {
     display: inline-block;
     position: relative;
     width: @venue_width;
-    height: @venue_width;
+    max-width: 100%;
 
     img {
       display: block;
@@ -217,6 +217,7 @@ header {
   }
 
   &:hover {
+    background-color: @details-color;
     box-shadow: 0 0 4em 1em @details-color;
 
     .name {
@@ -258,7 +259,7 @@ header {
   -webkit-justify-content: space-between;
   -ms-justify-content: space-between;
   justify-content: space-between;
-  height: @venue_width;
+  height: 100%;
   position: absolute;
   top: 0;
   right: 0;
